@@ -1,3 +1,8 @@
+2013-03-25  David S. Miller  <davem@davemloft.net>
+
+	* mpn/sparc64/ultrasparct3/hamdist.asm: New file.
+	* mpn/sparc64/ultrasparct3/popcount.asm: New file.
+
 2013-03-25  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/ia64/aorsorrlshC_n.asm: Generalised from aorslshC_n.asm.
